# hello-world-rust-wasmer-lib

./: Cargo.toml  README.md
src/: lib.rs
