[package]
name = "hello-world-wasmer-lib"
description = "🟪 A Rust library compiled to WASM and distributed with Wasmer"
version = "1.1.2"
edition = "2021"
documentation = "https://github.com/jcbhmr/hello-world-wasmer-lib#readme"
homepage = "https://github.com/jcbhmr/hello-world-wasmer-lib#readme"
repository = "https://github.com/jcbhmr/hello-world-wasmer-lib.git"
license = "0BSD"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasmer]
namespace = "jcbhmr"
abi = "none"
bindings = { wai-version = "0.2.3", imports = ["fib.wai", "io.wai"], exports = "hello-world-wasmer-lib.wai" }
